# make-git-better-2

./: .gitignore  Dockerfile  README.md
levels/: game-config.toml
levels/checkers/: add-1.sh  basic-1.sh  basic-2.sh  checkers-lib.sh  common.sh  hooks-1.sh  hooks-2.sh  log-1.sh  log-2.sh  log-3.sh  log-4.sh  log-5.sh  merge-1.sh  merge-2.sh  merge-3.sh  merge-4.sh  merge-5.sh  owasp-ctf-1.sh  owasp-ctf-2.sh  rebase-1.sh  rebase-2.sh  remote-1.sh  revert-1.sh  start-here.sh  tag-1.sh  tag-2.sh
levels/pages/: add-1.md  basic-1.md  basic-2.md  clone.md  hooks-1.md  hooks-2.md  log-1.md  log-2.md  log-3.md  log-4.md  log-5.md  merge-1.md  merge-2.md  merge-3.md  merge-4.md  merge-5.md  owasp-ctf-1.md  owasp-ctf-2.md  rebase-1.md  rebase-2.md  remote-1.md  revert-1.md  start-here.md  tag-1.md  tag-2.md
levels/tests/: basic-1.sh  basic-2.sh  common.sh  run_all_tests.sh  test-add-1.sh  (+24 more)
scripts/: Cargo.toml
scripts/generate-pre-receive-hook/: Cargo.toml  template.sh  template.tmpl
scripts/generate-pre-receive-hook/src/: main.rs
scripts/make-git-better-scripts/: .gitignore  Cargo.toml
scripts/make-git-better-scripts/src/lib/: lib.rs
scripts/src/lib/: lib.rs
submit-flags/submit-flags-app/: Cargo.toml
submit-flags/submit-flags-app/src/: Level.rs  level.rs  lib.rs
submit-flags/submit-flags-app/src/components/: common.rs  fetchflags.rs  level.rs  mainpage.rs  mod.rs
submit-flags/submit-flags-app/static/: index.html  levels_info.json
submit-flags/submit-flags-app/static/css/: style.css
utils/: how_many_players.sh  rebuild_docker.ps1  useful_aliases.sh
(+2 files in other folders)
