[package]
name = "generate-pre-receive-hook"
version = "0.1.0"
authors = ["Shay Nehmad <shay.nehmad@guardicore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tinytemplate = "1.0.4"