[package]
name = "submit-flags-app"
version = "0.1.0"
authors = ["Shay Nehmad <dude500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
log = "0.4.6"
wasm-logger = "0.2.0"
sha2 = "0.9.1"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.32"
